# SafarSaga

./: ADMIN_ACCESS_SETUP.md  ADMIN_BACKEND_FIX.md  ADMIN_BOOKINGS_DISPLAY_FIX.md  ADMIN_BOOKING_DETAIL_FIX.md  ADMIN_DASHBOARD_COMPLETE_FIX.md  ADMIN_PAYMENTS_FIX.md  ADMIN_SETUP_INSTRUCTIONS.md  BACKEND_ERRORS_FIX.md  BACKEND_FIXES_COMPLETE.md  BOOKING_SYSTEM_FIXES.md  CAPACITY_EXCEPTION_FIX.md  COMPLETE_BOOKING_ISSUE_ANALYSIS.md  CORS_AND_DESTINATIONS_FIX.md  CORS_POLICY_FIX.md  DASHBOARD_FIXES_COMPLETE.md  DESTINATIONS_AND_BOOKING_COMPLETE.md  DESTINATIONS_FIX_SUMMARY.md  DIFFICULTY_LEVEL_FIX.md  FINAL_DESTINATIONS_FIX.md  FIXES_APPLIED.md  QUICK_FIX_SUMMARY.md  SYNTAX_ERRORS_FIXED_FINAL.md  package-lock.json  package.json
backend/: .env.example  .gitignore  ADMIN_ENDPOINTS_NEEDED.md  AUTHENTICATION_FIXED.md  BACKEND_BOOKING_SYSTEM_COMPLETE.md  BACKEND_TEST_RESULTS.md  BACKEND_VALIDATION_ENHANCEMENT_COMPLETE.md  BOOKING_DATA_TYPE_FIX.md  BOOKING_DATA_TYPE_FIX_COMPLETE.md  BOOKING_SYSTEM_BACKEND_FIXES_COMPLETE.md  CAPTURE_REAL_ERROR.md  COMPREHENSIVE_BOOKING_TESTS_COMPLETE.md  DASHBOARD_BOOKING_FIX.md  DASHBOARD_BOOKING_FIX_COMPLETE.md  DATABASE_SCHEMA_FIXES.md  DESTINATIONS_SETUP_GUIDE.md  DESTINATION_BOOKING_SCHEMA_COMPLETE.md  DOUBLE_SAFETY_VALIDATION_COMPLETE.md  ENHANCED_DEBUGGING_AND_SAFETY_COMPLETE.md  FINAL_AUTH_FIX.md  FINAL_COMPREHENSIVE_FIX_COMPLETE.md  FINAL_FIX_VERIFICATION.py  GALLERY_UPLOAD_SETUP.md  MULTIPLE_BOOKINGS_FIX.md  PERFORMANCE_OPTIMIZATION_COMPLETE.md  PROXY_ERROR_COMPLETELY_FIXED.md  PROXY_ERROR_FIXED.md  PYDANTIC_MODEL_VALIDATION_COMPLETE.md  (+98 more)
(+229 files in other folders)
