[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "safarsaga-backend"
version = "1.0.0"
description = "Backend API for SafarSaga Travel Platform"
authors = [{name = "SafarSaga Team"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "supabase>=2.3.0",
    "cloudinary>=1.36.0",
    "PyJWT>=2.8.0",
    "cryptography>=41.0.7",
    "passlib[bcrypt]>=1.7.4",
    "httpx>=0.25.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "black>=23.11.0",
    "flake8>=6.1.0",
    "mypy>=1.7.1",
]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]